# dover

./: .gitignore  BUGS.md  CMakeLists.txt  CMakePresets.json  GEMINI.md  README.md  TODO.md  build.bat  build.ps1  build_log.txt  original_layout.cpp
.github/workflows/: release.yml
assets/: build_assets.py
assets/crosshairs/: pad_svgs.py  requirements.txt
assets/crosshairs/unpadded_crosshairs/: rename.py
assets/gamepad/: button_coordinates.h  extract_coords.py  pad_svgs.py  rename_pngs.py
assets/raw_fonts/: build_fonts.py
assets/raw_icons/: build_from_svg.py  icons.json  style.css
docs/: BaseWindow Architecture Migration Walkthrough  bug_report_imgui_inputtext_focus.md  bug_report_imgui_inputtext_mutation.md  coloring.md  imgui_focus_layout_fix.md
include/overlay/: dx11_hook.h  dx12_hook.h  dx9_hook.h  fonts.h  game_storage.h  hook_utils.h  icons.h  input_hook.h  input_mapper.h  notes_manager.h  notes_ui.h  overlay_ui.h  theme.h
include/overlay/assets/: asset_storage.h
include/overlay/crosshair/: crosshair_window.h
include/overlay/input/: input_window.h
include/overlay/notes/: formatter.h  layout.h  manager.h  style.h
include/overlay/settings/: settings_window.h
include/overlay/ui/components/: base_window.h
include/shared/: config.h  engine_quirks.h  fonts.h  game_storage.h  icons.h  input_mapper.h  input_utils.h  ipc.h  log.h  process.h  renderer.h  storage.h  telemetry.h  theme.h
include/shared/assets/: asset_storage.h
include/shared/crosshair/: crosshair_window.h
include/shared/input/: controller_tool_window.h  input_window.h  remapper.h
include/shared/notes/: formatter.h  layout.h  manager.h  style.h
include/shared/settings/: app_config.h  settings_window.h
include/shared/ui/: widgets.h
include/shared/ui/components/: base_window.h
plans/pre-commit-optimization/: input_visualizer_optimization.md
raw_crosshairs/: build_assets.py  build_crosshairs_header.py  makepng.py
raw_crosshairs/crosshairs.png/: get_size.py
raw_crosshairs/svg/: rename.py
raw_fonts/: build_fonts.py
raw_icons/: build_from_svg.py  demo.html  dover.icomoon.json  dover.json  generate_embeded_icons.py  icons.json  icons_mapping.json  refactor.txt
refactor-plan/: 00-overview.md  01-extract-navbutton.md  02-consolidate-globals.md  03-decouple-theme-init.md  04-fix-encapsulation.md  05-sidebar-heap-elim.md  06-settings-heap-elim.md  07-formatter-heap-reduce.md  08-fix-bgalpha-access.md
src/injector/: main.cpp
src/launcher/: launcher.rc  main.cpp
src/overlay/: dllmain.cpp  dx11_hook.cpp  dx12_hook.cpp  dx9_hook.cpp  game_storage.cpp  hook_utils.cpp  input_hook.cpp  input_mapper.cpp  notes_manager.cpp  notes_ui.cpp  overlay_runtime.cpp  overlay_runtime.h  overlay_ui.cpp  theme.cpp
src/overlay/assets/: asset_storage.cpp
src/overlay/crosshair/: crosshair_window.cpp
src/overlay/input/: input_window.cpp
src/overlay/notes/: formatter.cpp  layout.cpp  manager.cpp  style.cpp
src/overlay/settings/: settings_window.cpp
src/overlay/ui/components/: base_window.cpp
src/shared/: config.cpp  engine_quirks.cpp  game_storage.cpp  input_mapper.cpp  input_utils.cpp  ipc.cpp  log.cpp  process.cpp  renderer.cpp  storage.cpp  telemetry.cpp  theme.cpp
src/shared/assets/: asset_storage.cpp
src/shared/crosshair/: crosshair_window.cpp
src/shared/imgui_md/: imgui_md.cpp  imgui_md.h
src/shared/input/: controller_tool_window.cpp  input_window.cpp  remapper.cpp
src/shared/notes/: notes_formatter.cpp  notes_layout.cpp  notes_manager.cpp  notes_style.cpp
src/shared/settings/: app_config.cpp  settings_window.cpp
src/shared/ui/: widgets.cpp
src/shared/ui/components/: base_window.cpp
